adjust code